--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 --- 
 title: "HVHV.00.001 Geoinfosüsteemide rakendusvõimalused humanitaarteadustes"
 author: "Andres Kimber, Maarja-Liisa Pilvik"
-date: "sügis 2020"
+date: "sügis 2021"
 site: bookdown::bookdown_site
 output:
   bookdown::gitbook:
@@ -47,14 +47,14 @@ knitr::opts_chunk$set(message=FALSE,
 
 - 3 EAP  
 - **E** 12.15-13.45, **N** 14.15-15.45  
-- Nädalad 4.-9., 11.-16. **Praktikume ei toimu 2. ja 5. novembril!**  
+- Nädalad 4.-9., 11.-16. **Praktikume ei toimu 1. ja 4. novembril!**  
 - Jakobi 2-106
 - Kontakt ja info: andres.kimber@ut.ee, maarja-liisa.pilvik@ut.ee  
 - Hindamine arvestuslik. Kursuse lõpuks peavad olema esitatud    
-  + vabal valikul 2 kodutööd 5st,    
-  + lõpuprojekt. Esitlused 14. ja 17. detsembril.
-- Kohalkäimine ei ole kohustuslik, ent võimalusel tungivalt soovituslik. Mis tahes haigusnähtude ilmnemisel jää siiski koju ja osale praktikumis veebi teel. Kõik praktikumid kantakse üle BigBlueButtoni keskonnas.   
-- Materjale hoitakse ja täiendatakse **[Moodle](https://moodle.ut.ee/course/view.php?id=10284)'is**. Sealt leiad igal nädalal ka BBB lingid. 
+  + vabal valikul 2 kodutööd 4st,    
+  + lõpuprojekt. Esitlused 13. ja 16. detsembril.
+- Kohalkäimine ei ole kohustuslik, ent tungivalt soovituslik. Mis tahes haigusnähtude ilmnemisel jää siiski koju.   
+- Materjale hoitakse ja täiendatakse **[kursuse kodulehel](https://tartugeohum.github.io)** ja  **[Moodle](https://moodle.ut.ee/course/view.php?id=10284)'is**. 
 
 
 
@@ -155,7 +155,7 @@ Vt veel rakendusvaldkondi nt [siit](https://grindgis.com/blog/gis-applications-u
 ## Ruumiandmed ja GIS humanitaarteadustes  
 
 
-Ehkki näiteks arheoloogias on ruum ja ruumiandmed olnud alati kesksel kohal, on teistes humanitaaria valdkondades (nt ajaloos, kirjandusteadustes) toimunud viimase paarikümne aasta jooksul nn  **ruumiline pööre** (*Spatial Turn*). Ruumiline pööre algas tegelikult geograafia valdkonna seest: pelga inimelu või -tegevuse mahuti või "lava" tõlgenduse asemel seati fookusesse ruum kui pidevalt muutuv ja kompleksne sotsiaalne moodustis. See võimaldas leida enam ühist keelt ka sotsiaal- ja humanitaarteadlastega. Humanitaarteadustes on küll *ruumi* ja *koha* mõistetel olnud alati üsna prominentne roll, ent ruumilise pöörde käigus seati fookus eksplitsiitselt sellele, kuidas sotsiaalsete muutuste ning laiemalt inimtegevuse seletamiseks tuleb võtta arvesse ka ruumilist komponenti. Sealjuures rõhutatakse, et ruum võib ajas muutuda ning et *ruumid* võivad olla nii füüsilis-geograafilised kui ka abstraktsed, metafoorsed või väljamõeldud (vt nt hiljutist Keele & Kirjanduse erinumbrit ["Keel ja ruum"](https://keeljakirjandus.ee/ee/issue/2020-8-9/)). Nõnda on näiteks keskaegses kirjanduses narratiivi loomise seisukohast võrdselt olulised nii London kui ka Camelot; erinevate keelte kaassõnu (nt *ees*, *kõrval*, *taga*) uurides saame teada, kuidas mingi keele kõneleja end mõtteliselt millegi suhtes positsioneerib (kas absoluutselt või relatiivselt), kuidas tajutakse aega ruumisuhete kaudu jne). 
+Ehkki näiteks arheoloogias on ruum ja ruumiandmed olnud alati kesksel kohal, on teistes humanitaaria valdkondades (nt ajaloos, kirjandusteadustes) toimunud viimase paarikümne aasta jooksul nn  **ruumiline pööre** (*Spatial Turn*). Ruumiline pööre algas tegelikult geograafia valdkonna seest: pelga inimelu või -tegevuse mahuti või "lava" tõlgenduse asemel seati fookusesse ruum kui pidevalt muutuv ja kompleksne sotsiaalne moodustis. See võimaldas leida enam ühist keelt ka sotsiaal- ja humanitaarteadlastega. Humanitaarteadustes on küll *ruumi* ja *koha* mõistetel olnud alati üsna prominentne roll, ent ruumilise pöörde käigus seati fookus eksplitsiitselt sellele, kuidas sotsiaalsete muutuste ning laiemalt inimtegevuse seletamiseks tuleb võtta arvesse ka ruumilist komponenti. Sealjuures rõhutatakse, et ruum võib ajas muutuda ning et *ruumid* võivad olla nii füüsilis-geograafilised kui ka abstraktsed, metafoorsed või väljamõeldud (vt nt eelmisel aastal ilmunud Keele & Kirjanduse erinumbrit ["Keel ja ruum"](https://keeljakirjandus.ee/ee/issue/2020-8-9/)). Nõnda on näiteks keskaegses kirjanduses narratiivi loomise seisukohast võrdselt olulised nii London kui ka Camelot; erinevate keelte kaassõnu (nt *ees*, *kõrval*, *taga*) uurides saame teada, kuidas mingi keele kõneleja end mõtteliselt millegi suhtes positsioneerib (kas absoluutselt või relatiivselt), kuidas tajutakse aega ruumisuhete kaudu jne). 
 
 
 Ruumi asetamine kesksele positsioonile on digihumanitaaria katusmõiste alla sünnitanud interdistsiplinaarsed valdkonnad nimega **geohumanitaaria** (*GeoHumanities*) ja **ruumihumanitaaria** (*Spatial Humanities*), mis ühendavad GISi ja klassikalised ruumianalüüsi meetodid (nt teekondade arvutamine, kaartide koostamine) uuemate arvutuslike meetoditega (nt loomuliku keele töötlus, võrgustikuanalüüs, simulatsioonimudelid, tehisnärvivõrgud). Ruumihumanitaaria ja geohumanitaaria vaheline piir ei ole päris selge ning sageli kasutatakse mõisteid sünonüümidena, samuti on mõlemal valdkonnal suur ühisosa inimgeograafiaga. Kui aga eristust tehakse, siis loetakse geohumanitaaria valdkonda pigem konkreetsete, geograafiliste kohtade ja ruumidega tegelevad uurimused ning ruumihumanitaaria alla ka uurimused, mis analüüsivad sümboolseid, ähmaseid või väljamõeldud ruume.  
@@ -207,7 +207,6 @@ Seminar.
 
 Lugemiseks:
 
-- Martyn Jessop [-@Jessop2008]. *The Inhibition of Geographical Information in Digital Humanities Scholarship*
 - Todd Presner & David Shepard [-@Presner2015]. *Mapping the Geospatial Turn*
 
 Artiklite pdf-id leiad Moodle'ist.
